# webforget

./: specs.md
front_react/: package-lock.json  package.json  specs.md
front_react/src/: App.js  index.js  util.js  util.ts
front_react/src/actions/: func.ts  types.js
front_react/src/common/: index.ts
front_react/src/cp/: SearchDialog.jsx
front_react/src/cp/deco/: Bar.jsx  ToastMG.jsx  (+1 more)
front_react/src/dispatcher/: index.js
front_react/src/layouts/: Auth.js  Auth.jsx  Base.jsx  Edit.jsx  Splash.js  Splash.jsx  Sync.jsx  Test.jsx
front_react/src/store/: DataAccessStore.ts  MessageStore.ts  NoteStore.ts  SearchStore.ts  StateStore.ts  TagStore.ts  UserStore.ts
front_react/src/styles/: auth.css  index.css
server_go/: .gitignore  main.go
server_go/app/controller/: auth.go  note.go  search.go  tag.go
server_go/app/model/: auth.go  note.go  search.go  tag.go
server_go/app/router/: router.go
server_rust/: .gitignore  Cargo.toml  scheme.drawio
server_rust/migrations/2019-05-26-113125_create_users/: up.sql
server_rust/migrations/2019-05-27-174347_notes/: up.sql
server_rust/migrations/2019-05-30-142742_tags/: down.sql  up.sql
server_rust/migrations/2019-06-01-112734_note_dt/: down.sql  up.sql
server_rust/migrations/2019-06-19-141104_unicode/: up.sql
server_rust/src/: main.rs
server_rust/src/data/: auth.rs  mod.rs  models.rs  notes.rs  pagination.rs  schema.rs  search.rs  tags.rs
server_rust/src/server/: auth.rs  cors.rs  data.rs  mod.rs  notes.rs  search.rs  tags.rs
server_rust/src/src/data/: schema.rs
server_test/: base.py  populate.py
(+8 files in other folders)
